toml-pretty-deser/compilation_failure_tests/absorb_remaining_wrong_type_hashmap.stderr
error: custom attribute panicked
 --> compilation_failure_tests/absorb_remaining_wrong_type_hashmap.rs:5:1
  |
5 | #[tpd]
  | ^^^^^^
  |
  = help: message: #[tpd_absorb_remaining] on field 'extra' requires type IndexMap<String, T> or Option<IndexMap<String, T>>, found: HashMap < String, String >

warning: unused import: `std::collections::HashMap`
 --> compilation_failure_tests/absorb_remaining_wrong_type_hashmap.rs:2:5
  |
2 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
